tests/errors/lex_err02.kt
// binary literal error
0b1010